welcome.lessons.welcome.array.array123.Array123.scala.error
array123:6: error: not found: value indice
  	else {indice = indice +1}
              ^